fix: fix the overflow css

--- a/src/views/Timer/timer.module.css
+++ b/src/views/Timer/timer.module.css
@@ -1,9 +1,12 @@
 /* 背景色切换 */
 .wholeContainer {
   min-height: 100%;
+  height: 100%;
   transition: background 0.5s;
   box-sizing: border-box;
   padding: 24px;
+  display: flex;
+  flex-direction: column;
 
   &Idle {
     background: var(--color-warning-light-hover);
